Implement theme toggle functionality
Added a script to toggle dark theme.

--- a/templates/users.html
+++ b/templates/users.html
@@ -34,5 +34,10 @@
       <br />
       <a href="/">Go Back</a>
     </form>
+    <script>
+      function toggleTheme() {
+        document.body.classList.toggle("dark");
+      }
+    </script>
   </body>
 </html>
